cmake_minimum_required(VERSION 2.8)
add_definitions(-std=c++11)

project(alpha)

include_directories(./
    /usr/local/include/pcl-1.7
    /usr/local/include/eigen3
    /usr/include/vtk-5.10
    ./include
    )

add_executable(${PROJECT_NAME} "main.cpp"
    util/cam_utils.cc
    util/cv_painter.cc
    util/pc_utils.cc
    util/pc_viewer.cc
    src/Converter.cc
    src/Frame.cc
    src/FrameDrawer.cc
    src/Initializer.cc
    src/KeyFrame.cc
    src/KeyFrameDatabase.cc
    src/LocalMapping.cc
    src/LoopClosing.cc
    src/Map.cc
    src/MapDrawer.cc
    src/MapPoint.cc
    src/Optimizer.cc
    src/ORBextractor.cc
    src/ORBmatcher.cc
    src/PnPsolver.cc
    src/Sim3Solver.cc
    src/System.cc
    src/Tracking.cc
    src/Viewer.cc
    src/PointCloudMapping.cc
    src/myTool.cc
    Thirdparty/DBoW2/DBoW2/FORB.cpp
    Thirdparty/DBoW2/DUtils/Random.cpp
    Thirdparty/DBoW2/DBoW2/BowVector.cpp
    Thirdparty/DBoW2/DUtils/Timestamp.cpp
    Thirdparty/DBoW2/DBoW2/FeatureVector.cpp
    Thirdparty/DBoW2/DBoW2/ScoringObject.cpp
    Thirdparty/g2o/g2o/core/cache.cpp
    Thirdparty/g2o/g2o/core/solver.cpp
    Thirdparty/g2o/g2o/core/factory.cpp
    Thirdparty/g2o/g2o/stuff/property.cpp
    Thirdparty/g2o/g2o/stuff/timeutil.cpp
    Thirdparty/g2o/g2o/core/parameter.cpp
    Thirdparty/g2o/g2o/types/types_sba.cpp
    Thirdparty/g2o/g2o/core/batch_stats.cpp
    Thirdparty/g2o/g2o/core/hyper_graph.cpp
    Thirdparty/g2o/g2o/stuff/string_tools.cpp
    Thirdparty/g2o/g2o/core/robust_kernel.cpp
    Thirdparty/g2o/g2o/core/hyper_dijkstra.cpp
    Thirdparty/g2o/g2o/core/matrix_structure.cpp
    Thirdparty/g2o/g2o/core/sparse_optimizer.cpp
    Thirdparty/g2o/g2o/core/optimizable_graph.cpp
    Thirdparty/g2o/g2o/core/hyper_graph_action.cpp
    Thirdparty/g2o/g2o/core/jacobian_workspace.cpp
    Thirdparty/g2o/g2o/core/robust_kernel_impl.cpp
    Thirdparty/g2o/g2o/core/estimate_propagator.cpp
    Thirdparty/g2o/g2o/core/parameter_container.cpp
    Thirdparty/g2o/g2o/types/types_six_dof_expmap.cpp
    Thirdparty/g2o/g2o/core/robust_kernel_factory.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm.cpp
    Thirdparty/g2o/g2o/types/types_seven_dof_expmap.cpp
    Thirdparty/g2o/g2o/core/marginal_covariance_cholesky.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm_dogleg.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm_factory.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm_levenberg.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm_gauss_newton.cpp
    Thirdparty/g2o/g2o/core/optimization_algorithm_with_hessian.cpp
    )

target_link_libraries(${PROJECT_NAME}
    /home/wood/tool/MYNT-EYE-D-SDK/_output/lib/libmynteye_depth.so
    /home/wood/tool/MYNT-EYE-D-SDK/_output/lib/libmynteye_depth.so.1
    /home/wood/tool/MYNT-EYE-D-SDK/_output/lib/libmynteye_depth.so.1.8.0
    /home/wood/tool/MYNT-EYE-D-SDK/_output/lib/3rdparty/libeSPDI.so
    /home/wood/tool/MYNT-EYE-D-SDK/_output/lib/3rdparty/libeSPDI.so.3.1.4.1
    /usr/lib/x86_64-linux-gnu/libopencv_core.so
    /usr/lib/x86_64-linux-gnu/libopencv_highgui.so
    /usr/lib/x86_64-linux-gnu/libopencv_imgproc.so
    /lib/x86_64-linux-gnu/libpthread.so.0
    /home/wood/tool/pcl/build/lib/libpcl_visualization.so
    /home/wood/tool/pcl/build/lib/libpcl_common.so
    /home/wood/tool/pcl/build/lib/libpcl_features.so
    /home/wood/tool/pcl/build/lib/libpcl_filters.so
    /home/wood/tool/pcl/build/lib/libpcl_io.so
    /home/wood/tool/pcl/build/lib/libpcl_io_ply.so
    /home/wood/tool/pcl/build/lib/libpcl_kdtree.so
    /home/wood/tool/pcl/build/lib/libpcl_keypoints.so
    /home/wood/tool/pcl/build/lib/libpcl_octree.so
    /home/wood/tool/pcl/build/lib/libpcl_outofcore.so
    /home/wood/tool/pcl/build/lib/libpcl_people.so
    /home/wood/tool/pcl/build/lib/libpcl_recognition.so
    /home/wood/tool/pcl/build/lib/libpcl_registration.so
    /home/wood/tool/pcl/build/lib/libpcl_sample_consensus.so
    /home/wood/tool/pcl/build/lib/libpcl_search.so
    /home/wood/tool/pcl/build/lib/libpcl_segmentation.so
    /home/wood/tool/pcl/build/lib/libpcl_surface.so
    /home/wood/tool/pcl/build/lib/libpcl_tracking.so
    /usr/lib/x86_64-linux-gnu/libboost_system.so.1.58.0
    /usr/lib/libvtkRendering.so.5.10
    /usr/lib/libvtkFiltering.so.5.10
    /usr/lib/libvtkCommon.so.5.10
    /usr/lib/x86_64-linux-gnu/mesa/libGL.so.1
    /usr/lib/x86_64-linux-gnu/libGLEW.so.1.13
    /usr/local/lib/libpangolin.so
    /usr/lib/x86_64-linux-gnu/libopencv_video.so
    /usr/local/lib/libpangolin.so
    /usr/lib/x86_64-linux-gnu/libopencv_core.so
    /usr/lib/x86_64-linux-gnu/mesa/libGL.so.1
    /usr/lib/x86_64-linux-gnu/libGLEW.so.1.13
    /lib/x86_64-linux-gnu/libpthread.so.0
    /usr/lib/x86_64-linux-gnu/libopencv_imgproc.so
    /usr/lib/x86_64-linux-gnu/libopencv_calib3d.so
    /usr/lib/x86_64-linux-gnu/libopencv_features2d.so
    )

